--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="titre"> GABON </div>
         <div class="logo">
-            <img src="img/pluie.png" alt="">
+            <img src="img/pluie.png" alt="" class="image">
         </div>
         <div class="info">
             <div class="temp">28.03°</div>
@@ -50,7 +50,7 @@
             </div>
             <div class="enfant">
                 <p>mercredi</p>
-                <img src="img/pluie.png" alt="" width="50px">
+                <img src="img/pluie.png" alt="" width="50px" class="img">
                 <div class="tempera">20°</div>
             </div>
         </div>
