--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
         <div class="meto">
             <div class="enfant">
                 <p>lundi</p>
-                <img src="img/pluie.png" alt="" width="50px">
+                <img src="img/pluie.png" alt="" width="50px" class="img">
                 <div class="tempera">20°</div>
             </div>
             <div class="enfant">
                 <p>mardi</p>
-                <img src="img/pluie.png" alt="" width="50px">
+                <img src="img/pluie.png" alt="" width="50px" class="img">
                 <div class="tempera">20°</div>
             </div>
             <div class="enfant">
