--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         
         <div class="end">
-            <input type="text" id="input" value="Gabon"><button id="button">research</button>
+            <input type="text" id="input"><button id="button">research</button>
         </div>
         <div class="titre"> GABON </div>
         <div class="logo">
